--- a/.github/workflows/spring-app-advisor.yaml
+++ b/.github/workflows/spring-app-advisor.yaml
@@ -23,5 +23,5 @@ jobs:
       - name: Run Spring Application Advisor
         uses: dashaun/spring-app-advisor-action@v1.3.1
         with:
-          artifactory_token: ${{ secrets.ArtifactoryToken }}
-          git_token: ${{ secrets.GITHUB_TOKEN }}
+          artifactory_token: ${{ secrets.SPRING_ENTERPRISE_ARTIFACTORY }}
+          git_token: ${{ secrets.TOKEN_FOR_PRS }}
